# tch-upfirdn2d

./: Cargo.toml  README.md  build.rs
csrc/: wrapper.cpp  wrapper.cu  wrapper.hpp
src/: bindings.rs  lib.rs
tests/: upfirdn2d.rs
