[package]
name = "tch-upfirdn2d"
version = "0.1.0"
edition = "2021"

[dependencies]
torch-sys = "0.6.1"
tch = { version = "0.6.1", optional = true }

[build-dependencies]
anyhow = "1.0.45"
torch-build = { version = "0.1.0", optional = true }
cc = { version = "1.0.73", optional = true }
bindgen = { version = "0.59.2", optional = true }

[features]
default = ["link", "parallel", "tch"]
parallel = ["cc/parallel"]
codegen = ["bindgen"]
link = ["cc", "torch-build"]

[package.metadata.docs.rs]
default-features = false
